[gd_scene load_steps=4 format=2]

[ext_resource path="res://source/gui/ShipHoldView.tscn" type="PackedScene" id=1]
[ext_resource path="res://source/game/dock/CommMarket.gd" type="Script" id=2]
[ext_resource path="res://data/art/WindRiderTheme.tres" type="Theme" id=3]

[node name="CommMarket" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
theme = ExtResource( 3 )
script = ExtResource( 2 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="BG" type="Panel" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CommodityView" type="ItemList" parent="."]
anchor_left = 0.1
anchor_top = 0.2
anchor_right = 0.9
anchor_bottom = 0.45
margin_left = -0.8573
margin_top = -0.8573
allow_reselect = true
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ShipHoldView" parent="." instance=ExtResource( 1 )]
anchor_left = 0.1
anchor_top = 0.5
anchor_right = 0.9
anchor_bottom = 0.9

[node name="Buy" type="Button" parent="."]
anchor_left = 0.8
anchor_top = 0.05
anchor_right = 0.9
anchor_bottom = 0.1
text = "Buy"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Sell" type="Button" parent="."]
anchor_left = 0.8
anchor_top = 0.12
anchor_right = 0.9
anchor_bottom = 0.17
text = "Sell"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="PlayerCredits" type="Label" parent="."]
anchor_left = 0.7
anchor_top = 0.1
anchor_right = 0.7
anchor_bottom = 0.1
margin_right = 40.0
margin_bottom = 14.0
text = "Credits: 0000"
__meta__ = {
"_edit_use_anchors_": false
}
[connection signal="pressed" from="Buy" to="." method="_buy_pressed"]
[connection signal="pressed" from="Sell" to="." method="_sell_pressed"]
